@@ -93,8 +93,7 @@
 		<a onclick="switch($(this).html()){ case '0': case '-' : $('html, body').animate({scrollTop: $('.description').offset().top}, 300); return false; };" href="#view=list_transactions&year={year3}&country_code={country_code}">{t3}</a></td>
 	<td class="col6" title="{table_publisher_tip_b1_text}" onclick="switch($(this).children().first().html()){ case '0': case '-' : $('html, body').animate({scrollTop: $('.description').offset().top}, 300); return false; } return ctrack.url('#view=list_budgets&year={year3}&country_code={country_code}');">
 		<a onclick="switch($(this).html()){ case '0': case '-' : $('html, body').animate({scrollTop: $('.description').offset().top}, 300); return false; };" href="#view=list_budgets&year={year3}&country_code={country_code}">{b1}</a></td>
-	<td class="col7" title="{table_publisher_tip_b2_text}" onclick="switch($(this).children().first().html()){ case '0': case '-' : $('html, body').animate({scrollTop: $('.description').offset().top}, 300); return false; } return ctrack.url('#view=list_budgets&year={year4}&country_code={country_code}');">
-		<a onclick="switch($(this).html()){ case '0': case '-' : $('html, body').animate({scrollTop: $('.description').offset().top}, 300); return false; };" href="#view=list_budgets&year={year4}&country_code={country_code}">{b2}</a></td>
+	<td class="col7">{b2}</td>
 </tr>
 
 #table_publisher_countries_crs
@@ -139,6 +138,5 @@
 		<a onclick="switch($(this).html()){ case '0': case '-' : $('html, body').animate({scrollTop: $('.description').offset().top}, 300); return false; };" href="#view=list_transactions&year={year3}&country_code={country_code}">{t3}</a></td>
 	<td class="col6" title="{table_publisher_tip_b1_text}" onclick="switch($(this).children().first().html()){ case '0': case '-' : $('html, body').animate({scrollTop: $('.description').offset().top}, 300); return false; } return ctrack.url('#view=list_budgets&year={year3}&country_code={country_code}');">
 		<a onclick="switch($(this).html()){ case '0': case '-' : $('html, body').animate({scrollTop: $('.description').offset().top}, 300); return false; };" href="#view=list_budgets&year={year3}&country_code={country_code}">{b1}</a></td>
-	<td class="col7" title="{table_publisher_tip_b2_text}" onclick="switch($(this).children().first().html()){ case '0': case '-' : $('html, body').animate({scrollTop: $('.description').offset().top}, 300); return false; } return ctrack.url('#view=list_budgets&year={year4}&country_code={country_code}');">
-		<a onclick="switch($(this).html()){ case '0': case '-' : $('html, body').animate({scrollTop: $('.description').offset().top}, 300); return false; };" href="#view=list_budgets&year={year4}&country_code={country_code}">{b2}</a></td>
+	<td class="col7">{b2}</td>
 </tr>
