@@ -1,3 +1,8 @@
+Development Portal (2015-11-04 shi)
+==============================
+Clear links for publisher tables, year total columns
+
+
 Development Portal (2015-10-27 shi)
 ==============================
 Changed 'available' to 'total' for org budget column
